results responsive, prevent pokemon image from covering button

--- a/src/app/quizpage/quizpage.component.css
+++ b/src/app/quizpage/quizpage.component.css
@@ -48,7 +48,8 @@ main {
   margin: 15px;
   padding: 15px 10px;
   width: 80%;
-  /* height: 20%; */
+  position: relative;
+  z-index: 1;
 }
 
 #question {
@@ -63,7 +64,7 @@ main {
 }
 
 #choicesContainer {
-  font-size: 14px;
+  font-size: 13px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -96,16 +97,18 @@ input[type="radio"]:checked+#answerChoiceLabel {
 #pokemonImageContainer {
   margin-top: 5%;
   position: fixed;
-  bottom: -10px;
+  bottom: -30px;
+  /* z-index: 1; */
 }
 
 #pokemonImage {
   position: relative;
-  height: 290px;
+  height: 250px;
 }
 
 #pokeball {
   position: absolute;
+  z-index: 2;
   border-radius: 50%;
   height: 50px;
   bottom: 50%;
@@ -130,6 +133,7 @@ input[type="radio"]:checked+#answerChoiceLabel {
 
 #correctAnswer,
 #caughtAlert {
+  font-size: 16px;
   padding: 10px;
   margin-top: 10px;
 }
